--- a/Lab4/Source/AseLab4/MyApp/app/src/main/res/values/strings.xml
+++ b/Lab4/Source/AseLab4/MyApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My App</string>
+    <string name="app_name">MapWithPic</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_translate">TranslateActivity</string>
     <string name="title_activity_registration">RegistrationActivity</string>
